plugins {
    id 'eclipse'
    id 'net.neoforged.moddev.legacyforge' version '2.0.116'
}

// 构建时间戳，格式 yyyyMMddHHmmss，拼进文件名
def buildTimestamp = new java.text.SimpleDateFormat("yyyyMMddHHmmss").format(new Date())
version = "1.0-${buildTimestamp}"
base.archivesName = "tanshugetrees"

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

legacyForge {
    version = "1.20.1-47.4.10"

    runs {
        client {
            client()

            def mcreatorJvmOptions = System.getenv('MCREATOR_JVM_OPTIONS')
            if (mcreatorJvmOptions) {
                mcreatorJvmOptions.split("\\s+").findAll { it.trim() }.each { arg ->
                    jvmArgument(arg)
                }
            }
        }
        server {
            server()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        mcreator {
            sourceSet sourceSets.main
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

mixin {
    if (file("src/main/resources/tanshugetrees.mixins.json").exists()) {
        add sourceSets.main, "tanshugetrees.refmap.json"
        config "tanshugetrees.mixins.json"
    }
}

dependencies {
    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.5.0"))
    implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.5.0"))
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
}

jar {
    if (file("src/main/resources/tanshugetrees.mixins.json").exists()) {
        manifest.attributes([
                "MixinConfigs": "tanshugetrees.mixins.json"
        ])
    }
}

apply from: 'mcreator.gradle'
